@startuml

class Client {
init()
start()
}

class Adresse {
    gateadresse
    postnummer
    poststed
}

class Bil{
    registreringsnummer
    merke
    modell
    farge
    utleiegruppe/klasse
}

class Bilpark{
}

class Bilutleie{
    Navn
    telefonnummer
    FirmaAdresse
    Bilpark
    Utleiekontor[]
}

class InnleverBil{
}

class Kunde{
    Fornavn
    Etternavn
    Adresse
    telefonnummer
}
class Reservasjon{
    Date fra
    Date til
    pris
    Returgebyr

}
class Utleiekontor{
    super()
    kontornummer
    Adresse
    Reservasjoner[]
}

class UtleverBil{
}

class ReserverBil{
}


Client --|> UtleverBil
Client --|> InnleverBil
Client --|> ReserverBil
Bil --|> Bilpark
Bilpark --|> Bilutleie
Kontor --|> Bilutleie
Kunde --|> Bilutleie
Adresse --|> Kunde
Adresse --|> Bilutleie
Bil --|> Bilutleie
Kunde --|> Reservasjon
Reservasjon --|> Bilutleie
Adresse --|> Utleiekontor
Utleiekontor --|> Bilutleie
Bilutleie --|> Client
@enduml